# epc-scraping-pipeline

./: .gitignore  README.md  pyproject.toml
examples/: sample_epc_export.csv
src/epc_scraping_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/epc_scraping_pipeline/sources/: __init__.py  base.py  local_file.py  mock_source.py
tests/: test_pipeline.py
